--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,171 +5,128 @@
 </head>
 
 <body>
-  <div id="top"></div>
-  <div id="header"></div>
-  <div id="container"></div>
+  <header>
 
-  <script src="https://unpkg.com/react@15/dist/react.js"></script>
-  <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
-  <script src="https://unpkg.com/react-router/umd/react-router.min.js"></script>
-  <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.min.js"></script>
+  </header>
 
-  <script type="text/babel">
-
-  const Router = ReactRouterDOM.BrowserRouter;
-  const Route = ReactRouterDOM.Route;
-  const Switch = ReactRouterDOM.Switch;
-  const NavLink = ReactRouterDOM.NavLink;
-
-  class Home extends React.Component{
-      render(){
-          return <div className="list">
-                    <div className="col-6-p">
-                      <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    </div>
-                    <div className="col-6-n">
-                      <article className="blogpost clearfix">
-                      <h3>Duis aute irure</h3>
-                        <img src="img/ret1.jpg"/>
-                				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                        <div className="teg">
-                					<ul>
-                						<li><NavLink exact to="/" className="number_comments">37 cupidatat</NavLink></li>
-                						<li>Veniam: <NavLink to="/">Voluptate</NavLink></li>
-                						<li>Esse: <NavLink to="/">Occaecat</NavLink></li>
-                					</ul>
-                        </div>
-                				<NavLink to="/" className="button_more">incididunt...</NavLink>
-                        </article>
-
-                        <article className="blogpost clearfix">
-                        <div className="last">
-                        <h3>Duis aute irure</h3>
-                          <img src="img/ret2.jpg"/>
-                  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                          <div className="teg">
-                  					<ul>
-                  						<li><NavLink exact to="/" className="number_comments">37 cupidatat</NavLink></li>
-                  						<li>Veniam: <NavLink to="/">Voluptate</NavLink></li>
-                  						<li>Esse: <NavLink to="/">Occaecat</NavLink></li>
-                  					</ul>
-                          </div>
-                  				<NavLink to="/" className="button_more">incididunt...</NavLink>
-                          </div>
-                          </article>
-                    </div>
-                  </div>;
-        }
-  }
-  class About extends React.Component{
-      render(){
-          return <div className="services">
-        		<h2>Ullamco laboris</h2>
-        		<div className="product">
-        			<ul className="table">
-        				<li className="column">
-        					<div className="price">
-        						<h3>Fugiat nulla <span>voluptate</span></h3>
-        						<a className="signup" href="#">Adipisicing</a>
-        						<ul>
-        							<li>Exercitation</li>
-        							<li>Proident</li>
-        							<li>Consequat</li>
-        							<li>Occaecat</li>
-        						</ul>
-        					</div>
-        				</li>
-        				<li className="column">
-                <div className="price">
-                  <h3>Fugiat nulla <span>voluptate</span></h3>
-                  <a className="signup" href="#">Adipisicing</a>
-                  <ul>
-                    <li>Exercitation</li>
-                    <li>Proident</li>
-                    <li>Consequat</li>
-                    <li>Occaecat</li>
-                  </ul>
-                </div>
-        				</li>
-        				<li className="column">
-                <div className="price">
-                  <h3>Fugiat nulla <span>voluptate</span></h3>
-                  <a className="signup" href="#">Adipisicing</a>
-                  <ul>
-                    <li>Exercitation</li>
-                    <li>Proident</li>
-                    <li>Consequat</li>
-                    <li>Occaecat</li>
-                  </ul>
-                </div>
-        				</li>
-        			</ul>
-        		</div>
-        	</div>;
-      }
-  }
-  class NotFound extends React.Component{
-      render(){
-          return <h2>Resource is not found</h2>;
-      }
-  }
-  class Contacts extends React.Component{
-      render(){
-          return  <div className="contact">
-          <h3 className="hcontact">Nemo enim ipsam</h3>
-          <form className="clearfix">
-            <div className="half left clearfix">
-              <input type="text" className="input-name" placeholder="Ratione"/>
-              <input type="email" className="input-email" placeholder="Magnam"/>
-              <input type="text" className="input-subject" placeholder="Numquam eius"/>
-            </div>
-            <div className="half right clearfix">
-              <textarea name="message" type="text" className="input-message" placeholder="Quis autem"></textarea>
-            </div>
-            <input type="submit" value="Reprehenderit " className="input-submit"/>
-          </form>
-          </div>;
-      }
-  }
-  class Nav extends React.Component{
-      render(){
-          return <div className="sticky">
-        		<nav>
-        			<ul>
-        				<li><NavLink exact to="/" activeClassName="active" className="name">Houme</NavLink></li>
-        				<li><NavLink to="/about" activeClassName="active" className="name">About</NavLink></li>
-        				<li><NavLink to="/contacts" activeClassName="active" className="name">Contacts</NavLink></li>
-        			</ul>
-        		</nav>
-
-            </div>;
-      }
-  }
-  ReactDOM.render(
-      <Router>
-          <div>
-              <Nav />
-              <Switch>
-                  <Route exact path="/" component={Home} />
-                  <Route path="/about" component={About} />
-                  <Route path="/contacts" component={Contacts} />
-                  <Route component={NotFound} />
-              </Switch>
-          </div>
-      </Router>,
-      document.getElementById("header")
-  )
+  <section class="top">
+    <div class="logo">
+      <h1>Cold <span>coach</span></h1>
+    </div>
+    <h4>GoldCoach представляет…</h4>
+    <div class="line"></div>
+    <h2>БЕСПЛАТНЫЙ ВЕБИНАР</h2>
+    <h3>10 ШАГОВ К СОЗДАНИЮ «САМОРАЗВИВАЮЩЕЙСЯ КОМПАНИИ» (ВКЛЮЧАЯ СВОБОДУ, КАК УПРАВЛЯТЬ 3 КОМПАНИЯМИ И ПРОЙТИ IRONMAN)</h3>
+    <a href="#">Забронировать место! >></a>
+  </section>
 
 
-  </script>
+  <section class="midlle">
+    <div class="col-6-p">
+      <div class="author">
+        <p>Среда</p>
+        <p>17 мая</p>
+        <div class="line"></div>
+        <p><span>20:00 МСК </span></p>
+      </div>
+      <img src="img/pic2.png" alt="">
+      <h4>Спикер</h4>
+      <h3>Иван<br>ЗИМБИЦКИЙ</h3>
+      <ul class="list">
+        <li>Отец, блогер, путешественник, спортсмен</li>
+        <li>Владелец 3 бизнесов (детский футбол, розница, онлайн)</li>
+        <li>Автор 6 книг и более 200 публикаций</li>
+        <li>Создал более 20 курсов и тренингов, которые прошли более 20 000 человек</li>
+        <li>Помог более 1 000 предпринимателей начать успешный бизнес</li>
+        <li>Владелец сети футбольных клубов для дошкольников</li>
+        <li>Успешно управляет более 130 людьми (и живет счастливо)</li>
+        <li>Создал мировую революцию в дестком футболе создав прибыльную модель футбольной школы для дошкольников от 3 до 7 лет</li>
+        <li>Выступал на одной сцене с Джорданом Белфордом (Волк с Уолл-Стрит)</li>
+      </ul>
+    </div>
 
+    <div class="col-6-n">
+      <h4>До старта трансляции осталось…</h4>
+      <div id="timer">
+        <ul class="tm">
+          <li>
+            <div id="day" class="box">1</div>
+            <p>День</p>
+          </li>
+          <li>
+            <div id="hour" class="box">23</div>
+            <p>Часа</p>
+          </li>
+          <li>
+            <div id="minute" class="box">7</div>
+            <p>Минут</p>
+          </li>
+          <li>
+            <div id="second" class="box">30</div>
+            <p>Секунд</p>
+          </li>
+        </ul>
+      </div>
+      <h5>Вот всего лишь малая часть из того, что ты узнаешь на вебинаре:</h5>
+      <ul class="list1">
+        <li>Простая <span>10 шаговая система </span>для дизайна «Саморазвивающейся Компании» в 2017 году</li>
+        <li>Как решить проблему людей №1 и масштабироать бизнес в 10 раз</li>
+        <li>Какие <span>4 пункта </span>плана внедрить за следующие 6 месяцев, чтобы освободить 80% вашего время</li>
+        <li><span>2 простых </span>и легкие для внедрения «фишки», которые радикально поднимут эффективность компании</li>
+        <li><span>3 фундаментальные причины</span>, почему Ваш бизнес никогда не масштабируется на свой 100% потенциал прибыли </li>
+        <li><span>Вы или Вас</span>: как перестать быть жертвой подчиненных и начать профессионально управлять людьми</li>
+        <li><span>3 тактики</span>, которые превратят кризисную компанию в устойчивую и прибыльную в 2017 году </li>
+        <li><span>Формула </span>как построить здоровую и умную компанию на долгие годы, чтобы и внуки вами гордились  </li>
+      </ul>
+    </div>
+  </section>
+
+
+  <section class="midlle-b">
+    <h4>Формат участия: живое присутствие в онлайн (повтора и записи не будет) всего 500 мест</h4>
+    <a href="#">Для кого вебинар? </a>
+    <h3>Для существующих предпринимателей с чистым доходом от 150 000 рублей в месяц</h3>
+    <div class="line"></div>
+  </section>
+
+  <section class="midlle-d">
+    <h4>Наконец-то, раскрыта технология как предпринимателю управлять прибыльным бизнесом (и даже не одним), при этом оставаясь свободным, здоровым и довольным жизнью, без стресса и необходимости жить на работе! </h4>
+    <p>Представьте, как Вы <span>с удовольствием просыпаетесь утром </span> и с самых первых минут дня точно знаете, что нужно делать сегодня, чтобы сделать ваш бизнес еще более прибыльным…</p>
+
+    <p>За утренним кофе Вы смотрите статистику по продажам и <span>с чувством гордости видите</span>, что по сравнению с прошлым месяцем она выросла значительно, так как Вы внедрили новые системы в продажах и маркетинге…</p>
+
+    <p>Вы с <span>нетерпением ждете встречи с Вашей командой</span>, чтобы обсудить новый способы давать больше ценности вашим клиентам и мотивировать их возвращаться к вам чаще и чаще.</p>
+
+    <p>При этом вы знаете, что уже <span>в 4 часа дня будете свободны</span>, чтобы заняться спортом, а потом провести вечер с семьей… А в следующем месяце у Вас запланирован отпуск в теплой стране, о которой вы так давно мечтали…</p>
+
+    <p><span>Не так давно вы бы провели этот день (и многие следующие) в стрессе, «тушении пожаров»</span>, работая слишком долго и слишком упорно, почти без поддержки, реагируя на проблемы, вместо того, чтобы создавать успех.</p>
+
+    <p>Вы улыбаетесь, понимая, как далеко вы продвинулись и как много побед впереди…</p>
+
+    <p>Приветсвую, меня зовут Иван Зимбицкий и в начале карьеры предпринимателя я тоже работал по 12-18 часов в день, как и вы, возможно, сейчас… Однако я общался с многими западными предпринимателями и видел, что они успешнее меня и при этом свободны и наслаждаются жизнью, а их бизнес растет…</p>
+
+    <p>Чтобы раскрыть их секрет я инвестировал в обучение у наставников из США более $15 000. И мне удалось «взломать» код технологии как создавать «саморазвивающийся» бизнес, который дает деньги и свободу.</p>
+
+    <p>Сейчас у меня 3 бизнеса.</p>
+
+    <p>При этом я путешествую по 4 месяца в году, обучаюсь, провожу время с семьей, обучаю команду, провожу мероприятия на 100-150 человек, занимаюсь спортом каждый день и интенсивно готовлюсь к прохождению дистанции Ironman 70.3 (это 1,9 км плавания, 90 км на велосипеде и 21,1 км – бег).</p>
+  </section>
+
+  <section class="midlle-p">
+    <div class="col-12">
+      <img src="img/pic6.jpg" alt="">
+    </div>
+  </section>
+
+  <section class="bottom">
+    <p>И я знаю, что это возможно и для вас…</p>
+    <p><span>Приходите на мой вебинар и раскрою вам свою технология в деталях. </span></p>
+    <a class="button" href="#">Да! Забронировать место сейчас! >></a>
+    <ul>
+      <li><a href="#"><img src="img/pic7.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/pic8.jpg" alt=""></a></li>
+      <li><a href="#"><img src="img/pic9.jpg" alt=""></a></li>
+    </ul>
+  </section>
 </body>
 </html>
