--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,8 @@
 
 
+<title>Gold coach</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Poisseux</title>
-<link rel="stylesheet" href="css/font-awesome.min_1.css">
-<link rel="stylesheet" href="font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="css/screen.css" rel="stylesheet">
+<link rel="stylesheet prefetch" href="scren.css">
+<script type="text/javascript" src = "pr.js"></script>
